fix responsive collapse of stats

--- a/web/src/pages/overview/OverviewStats/style.scss
+++ b/web/src/pages/overview/OverviewStats/style.scss
@@ -1,6 +1,4 @@
-@use '../../../shared/scss/base/variables/' as v;
-@use '../../../shared/scss/helpers/mixins' as mix;
-@use '../../../shared/scss/helpers/bootstrap/' as bs;
+@use '@scss/helpers' as *;
 
 #network-overview-page {
   .page-content {
@@ -11,49 +9,53 @@
       grid-template-columns: 1fr;
       justify-items: start;
       box-sizing: border-box;
-      @include bs.media-breakpoint-down(md) {
+      @include media-breakpoint-down(md) {
         padding-left: 1.5rem;
         padding-right: 1.5rem;
       }
-      @include bs.media-breakpoint-down(xl) {
+      @include media-breakpoint-up(md) {
+        justify-items: center;
+      }
+      @include media-breakpoint-down(xl) {
         padding-left: 2rem;
         padding-right: 2rem;
       }
-      @include bs.media-breakpoint-up(xl) {
+      @include media-breakpoint-up(xl) {
         padding-left: 6rem;
         padding-right: 6rem;
       }
-      @include bs.media-breakpoint-up(xxl) {
+      @include media-breakpoint-up(xxl) {
         grid-template-columns: 1fr 1fr;
-        justify-items: center;
-      }
-
-      & > .summary,
-      .activity-graph {
-        max-width: 768px;
       }
 
       & > .summary {
         box-shadow: 5px 5px 15px #00000005;
-        background-color: v.$white;
+        background-color: var(--white);
         border-radius: 15px;
         height: 104px;
         position: relative;
         width: 100%;
-        @include bs.media-breakpoint-down(md) {
+        @include media-breakpoint-down(md) {
           height: 60px;
         }
-        @include bs.media-breakpoint-down(xl) {
+        @include media-breakpoint-down(xxl) {
           display: grid;
           grid-auto-columns: 1fr;
           grid-template-rows: 1fr;
         }
-        @include bs.media-breakpoint-up(xl) {
+        @include media-breakpoint-up(xl) {
           display: flex;
           flex-direction: row;
           align-items: center;
           align-content: center;
           justify-content: flex-start;
+          min-width: 800px;
+        }
+        @include media-breakpoint-down(xxl) {
+          max-width: 800px;
+        }
+        @include media-breakpoint-up(xxl) {
+          min-width: 800px;
         }
 
         & > .info {
@@ -62,7 +64,7 @@
           justify-content: flex-start;
           box-sizing: border-box;
           height: 100%;
-          @include bs.media-breakpoint-down(md) {
+          @include media-breakpoint-down(md) {
             align-items: center;
             align-content: center;
             justify-content: center;
@@ -71,46 +73,46 @@
               padding-right: 1.5rem;
             }
           }
-          @include bs.media-breakpoint-up(md) {
+          @include media-breakpoint-up(md) {
             padding-top: 2rem;
           }
-          @include bs.media-breakpoint-down(xl) {
+          @include media-breakpoint-down(xl) {
             grid-row: 1;
             width: 100%;
           }
-          @include bs.media-breakpoint-up(xl) {
-            width: 192.5px;
+          @include media-breakpoint-up(xl) {
+            padding-right: 1.5rem;
           }
 
           &:first-of-type {
-            @include bs.media-breakpoint-down(md) {
+            @include media-breakpoint-down(md) {
               padding-left: 1.5rem;
             }
-            @include bs.media-breakpoint-up(md) {
+            @include media-breakpoint-up(md) {
               padding-left: 2rem;
             }
           }
 
           &:not(:first-of-type) {
-            @include bs.media-breakpoint-down(md) {
+            @include media-breakpoint-down(md) {
               padding-left: 1rem;
             }
-            @include bs.media-breakpoint-up(md) {
+            @include media-breakpoint-up(md) {
               padding-left: 1.95rem;
             }
 
-            border-left: 1px solid v.$gray-border;
+            border-left: 1px solid var(--gray-border);
           }
 
           & > .info-title {
-            @include bs.media-breakpoint-down(md) {
+            @include media-breakpoint-down(md) {
               display: none;
             }
-            @include mix.typography(
+            @include typography(
               12px,
               17px,
               medium,
-              v.$gray-light,
+              var(--gray-light),
               'Poppins'
             );
           }
@@ -124,21 +126,21 @@
             column-gap: 1.15rem;
 
             & > .info-value {
-              @include bs.media-breakpoint-down(md) {
-                @include mix.typography(
+              @include media-breakpoint-down(md) {
+                @include typography(
                   20px,
                   28px,
                   semiBold,
-                  v.$text-main,
+                  var(--text-main),
                   'Poppins'
                 );
               }
-              @include bs.media-breakpoint-up(md) {
-                @include mix.typography(
+              @include media-breakpoint-up(md) {
+                @include typography(
                   41px,
                   57px,
                   semiBold,
-                  v.$text-main,
+                  var(--text-main),
                   'Poppins'
                 );
               }
@@ -160,11 +162,11 @@
                   align-content: center;
                   justify-content: flex-start;
                   column-gap: 0.4rem;
-                  @include mix.typography(
+                  @include typography(
                     12px,
                     17px,
                     medium,
-                    v.$text-main,
+                    var(--text-main),
                     'Poppins'
                   );
                 }
@@ -178,7 +180,7 @@
         padding: 1.5rem 2rem 1rem;
         box-sizing: border-box;
         border-radius: 15px;
-        background-color: v.$white;
+        background-color: var(--white);
         box-shadow: 5px 5px 15px #00000005;
         height: 104px;
         width: 100%;
@@ -192,18 +194,18 @@
           margin-bottom: 1.5rem;
 
           h3 {
-            @include mix.typography(
+            @include typography(
               15px,
               21px,
               medium,
-              v.$text-main,
+              var(--text-main),
               'Poppins'
             );
-            @include bs.media-breakpoint-down(md) {
+            @include media-breakpoint-down(md) {
               text-transform: uppercase;
-              @include mix.text-weight(semiBold);
+              @include text-weight(semiBold);
             }
-            @include bs.media-breakpoint-up(md) {
+            @include media-breakpoint-up(md) {
             }
           }
 
@@ -215,24 +217,24 @@
             align-content: center;
             justify-content: flex-start;
             height: 17px;
-            @include bs.media-breakpoint-down(md) {
+            @include media-breakpoint-down(md) {
               column-gap: 1rem;
             }
-            @include bs.media-breakpoint-up(md) {
+            @include media-breakpoint-up(md) {
               column-gap: 2rem;
             }
 
             & > span {
-              @include bs.media-breakpoint-down(md) {
+              @include media-breakpoint-down(md) {
                 &:first-of-type {
                   display: none;
                 }
               }
-              @include mix.typography(
+              @include typography(
                 12px,
                 17px,
                 medium,
-                v.$gray-light,
+                var(--gray-light),
                 'Poppins'
               );
             }
